# added description to gesamtzahlen, zeit and beziehungen # fixed monate chart (month were shifted by one) # changed entity type names to all plural

--- a/src/styles/assets.scss
+++ b/src/styles/assets.scss
@@ -43,4 +43,5 @@
 .box {
    background-color: $col-medium;
    border-radius: $border-radius;
+   padding: $padding;
 }
